<resources>
    <string name="app_name">Plumbing Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="map">Map</string>
    <string name="destination">Destination</string>
    <string name="finder">Finder...</string>
    <string name="instruction">Tap and hold on any point on the map to set coordinates</string>
    <string name="tap_to_reset">Tap any point on the map to reset the coordinates</string>
    <string name="actually_destination">Your actually destination point is:</string>
    <string name="havent_set_coor">You haven\'t set a destination point yet</string>
    <string name="set_as_destination_point">Set as destination point</string>
    <string name="reset">reset</string>
    <string name="latitude">latitude:</string>
    <string name="longitude">longitude:</string>
    <string name="please_wait">Please, wait...</string>
    <string name="set_new_destination_point">Set new destination point</string>
    <string name="text_about">This application is intended exclusively for free use. \nCreated by Igor Lysenko specifically for the "Santekhnika-Online"</string>
</resources>