<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.HomeFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_home" />

    <TextView
        android:id="@+id/tvDest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="serif-monospace"
        android:text="@string/destination"
        android:textColor="@color/purple_700"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:fontFamily="serif-monospace"
        android:text="@string/finder"
        android:textColor="@color/purple_700"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDest" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnResetCoordinates"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/ic_reset"
        android:background="@drawable/bg_tv_set_coor"
        android:backgroundTint="@color/purple_200"
        android:alpha="0.5"
        app:layout_constraintBottom_toTopOf="@+id/cvMapHome"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/reset"
        android:textColor="@color/purple_700"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/btnResetCoordinates"
        app:layout_constraintBottom_toTopOf="@+id/btnResetCoordinates"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.cardview.widget.CardView
        android:layout_width="304dp"
        android:layout_height="304dp"
        android:layout_marginTop="198dp"
        app:cardCornerRadius="100dp"
        android:elevation="0dp"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMapHome"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="200dp"
        app:cardCornerRadius="100dp"
        android:backgroundTint="@color/purple_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.yandex.mapkit.mapview.MapView
            android:id="@+id/mvHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.yandex.mapkit.mapview.MapView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvActuallyDestination"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="monospace"
        android:textSize="18sp"
        android:textColor="@color/purple_700"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/actually_destination"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llCoordinatesHome"/>

    <TextView
        android:id="@+id/tvNoCoordinates"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:fontFamily="monospace"
        android:textSize="22sp"
        android:textColor="@color/purple_700"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/havent_set_coor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvMapHome"
        app:layout_constraintBottom_toTopOf="@id/llCoordinatesHome"/>

    <LinearLayout
        android:id="@+id/llCoordinatesHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvActuallyCoordinates"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:cardCornerRadius="16dp"
            android:backgroundTint="@color/bg_card_coordinates"
            android:visibility="gone"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:textSize="18sp"
                    android:textColor="@color/purple_700"
                    android:gravity="center"
                    android:text="@string/latitude" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="monospace"
                    android:textSize="18sp"
                    android:textColor="@color/purple_700"
                    android:gravity="center"
                    android:text="@string/longitude" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/tvLatitudeHome"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:textSize="14sp"
                    android:textColor="@color/purple_700"
                    android:gravity="center"
                    android:text="59.9125839170519" />

                <TextView
                    android:id="@+id/tvLongitudeHome"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="monospace"
                    android:textSize="14sp"
                    android:textColor="@color/purple_700"
                    android:gravity="center"
                    android:text="59.9125839170519" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSetDestinationHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="75dp"
            android:layout_gravity="bottom|center"
            android:padding="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btn_set_coor"
            android:text="@string/set_new_destination_point"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>