<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.MapFragment">

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/mvMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </com.yandex.mapkit.mapview.MapView>

    <TextView
        android:id="@+id/tvInstruction"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:alpha="0.8"
        android:background="@drawable/bg_tv_set_coor"
        android:fontFamily="monospace"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/instruction"
        android:textColor="@color/purple_700"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/llCoordinates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:alpha="0.9"
            app:cardCornerRadius="16dp"
            android:backgroundTint="@color/bg_card_coordinates"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:textSize="18sp"
                    android:textColor="@color/purple_700"
                    android:gravity="center"
                    android:text="@string/latitude" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="monospace"
                    android:textSize="18sp"
                    android:textColor="@color/purple_700"
                    android:gravity="center"
                    android:text="@string/longitude" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/tvLatitude"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:textSize="14sp"
                    android:textColor="@color/purple_700"
                    android:gravity="center"
                    android:text="59.9125839170519" />

                <TextView
                    android:id="@+id/tvLongitude"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="monospace"
                    android:textSize="14sp"
                    android:textColor="@color/purple_700"
                    android:gravity="center"
                    android:text="59.9125839170519" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSetDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="75dp"
            android:padding="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btn_set_coor"
            android:text="@string/set_as_destination_point"
            />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ibUserLocationSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/ic_location_searching"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>